# trader

./: .gitignore  Cargo.toml  trader.db
src/: main.rs  page.rs  server.rs  site.rs  snippets.rs  user.rs  user_database.rs  user_manager.rs  wallet.rs
src/database/: mod.rs  user_table.rs
templates/: hello.html  main.html  main.js  style.css
