[package]
name = "trader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
http = "0.2"
askama = "0.11"
iota-wallet = { git = "https://github.com/iotaledger/wallet.rs", branch = "develop", default-features = false, features = ["stronghold"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
parking_lot = "0.10.0"
rusqlite = "0.27.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.20.0"
web3 = "0.18.0"
hex = "0.4.3"
